-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
5860c9c12 (dev), 9c62538e5 (6.5)
I found a left over of Qt5 style code that we don't use anymore this way:
import QtQuick import 'qrc:/untitled/components' as C Window { id: root width: 640 height: 480 visible: true title: "Foo" C.Foo {} }
The compiler claims
Warning: main.qml:11:5: C.Foo was not found. Did you add all import paths? C.Foo {} ^ Info: Did you mean "Foo"? Foo.Foo {} ^^^ Warning: main.qml:11:5: Type C.Foo is used but it is not resolved C.Foo {} ^ Info: main.qml:2:1: Unused import at main.qml:2:1 import 'qrc:/untitled/components' as C ^^^^^^
, but works during runtime. This is a bit special for sure...
Example attached.
For Gerrit Dashboard: QTBUG-108803 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
476887,5 | qmllint: Separate logic by import type in QQmlJSImportVisitor::visit | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
477618,4 | qmllint: Separate logic by import type in QQmlJSImportVisitor::visit | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |