qmllint: Separate logic by import type in QQmlJSImportVisitor::visit

This patch reorganizes the logic of the import visitor to deal with each
import type (paths, qrc: urls, file: urls) separately.

This reorganisation fixes QTBUG-108803 which happened because "qrc:"
imports were being treated as paths leading to things like
":/untitled/qrc:/untitled/components".

Fixes: QTBUG-108803
Pick-to: 6.5
Change-Id: I5af20d10c533455215895be66b5cd98a977fd18a
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>