tests/auto/qml/qmllint/data/untitled/components/Foo.qml
@@ -1,0 +1,5 @@
+import QtQuick
+
+Text {
+    text: "Here I am!"
+}
