tests/auto/qml/qmllint/data/untitled/main.qml
@@ -1,0 +1,9 @@
+pragma Strict
+
+import QtQuick
+import 'qrc:/untitled/components' as C
+
+Window {
+    id: root
+    C.Foo {}
+}
