tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -79,6 +79,8 @@ private Q_SLOTS:
 
     void additionalImplicitImport();
 
+    void qrcUrlImport();
+
     void attachedPropertyReuse();
 
     void missingBuiltinsNoCrash();
@@ -1654,7 +1656,16 @@ void TestQmllint::additionalImplicitImport()
     const auto guard = qScopeGuard([this]() {m_linter.clearCache(); });
     runTest("additionalImplicitImport.qml", Result::clean(), {}, {},
             { testFile("implicitImportResource.qrc") });
+}
 
+void TestQmllint::qrcUrlImport()
+{
+    const auto guard = qScopeGuard([this]() { m_linter.clearCache(); });
+
+    QJsonArray warnings;
+    callQmllint(testFile("untitled/main.qml"), true, &warnings, {}, {},
+                { testFile("untitled/qrcUrlImport.qrc") });
+    checkResult(warnings, Result::clean());
 }
 
 void TestQmllint::attachedPropertyReuse()
